Initial dbcontext setup

--- a/src/MyRouteTracker.Web/appsettings.json
+++ b/src/MyRouteTracker.Web/appsettings.json
@@ -1,4 +1,23 @@
 {
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
