--- a/src/MyRouteTracker.Web/MyRouteTracker.Web.csproj
+++ b/src/MyRouteTracker.Web/MyRouteTracker.Web.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Htmx" Version="1.8.0" />
+    <PackageReference Include="Htmx.TagHelpers" Version="1.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.7" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
