--- a/src/MyRouteTracker.Web/wwwroot/package.json
+++ b/src/MyRouteTracker.Web/wwwroot/package.json
@@ -3,23 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run clean && npx parcel build",
+    "clean": "rimraf ./dist"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "@parcel/transformer-sass": "^2.12.0",
+    "parcel": "^2.12.0",
+    "rimraf": "^6.0.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cash-dom": "^8.1.5",
     "htmx.org": "^2.0.2"
+  },
+  "source": [
+    "./index.scss",
+    "./index.js"
+  ],
+  "targets": {
+    "default": {
+      "distDir": "./dist"
+    }
   }
 }
