Adding oidc authentication with local idp

--- a/src/MyRouteTracker.Web/appsettings.json
+++ b/src/MyRouteTracker.Web/appsettings.json
@@ -24,5 +24,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppOptions": {
+    "MongoDbConnection": "",
+    "DatabaseName": ""
+  },
+  "OAuthOptions": {
+    "Authority": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  }
 }
