--- a/src/MyRouteTracker.Web/wwwroot/package.json
+++ b/src/MyRouteTracker.Web/wwwroot/package.json
@@ -31,6 +31,9 @@
     "./index.js"
   ],
   "targets": {
+    "main": {
+      "optimize": true
+    },
     "default": {
       "distDir": "./dist"
     }
