--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,20 @@
   "tasks": [
     {
       "label": "build",
-      "dependsOn": ["npm-build", "dotnet-build"],
+      "dependsOn": ["fe-build", "dotnet-build"],
       "dependsOrder": "parallel",
       "group": {
         "kind": "build",
         "isDefault": true
+      }
+    },
+    {
+      "label": "build-launch",
+      "dependsOn": ["dotnet-build"],
+      "dependsOrder": "parallel",
+      "group": {
+        "kind": "build",
+        "isDefault": false
       }
     },
     {
@@ -23,24 +32,36 @@
       "problemMatcher": "$msCompile",
       "group": {
         "kind": "build",
-        "isDefault": true
+        "isDefault": false
       }
     },
     {
-      "label": "npm-install",
-      "type": "npm",
-      "script": "install",
+      "label": "pnpm-install",
+      "command": "pnpm",
+      "type": "shell",
+      "args": ["install"],
       "options": {
-        "cwd": "${workspaceFolder}/src/MyRouteTracker.Web/wwwroot"
+        "cwd": "${workspaceFolder}/src/MyRouteTracker.Frontend"
       }
     },
     {
-      "label": "npm-build",
-      "type": "npm",
-      "script": "build",
-      "dependsOn": ["npm-install"],
+      "label": "fe-build",
+      "command": "pnpm",
+      "type": "shell",
+      "dependsOn": ["pnpm-install"],
+      "args": ["quasar", "build"],
       "options": {
-        "cwd": "${workspaceFolder}/src/MyRouteTracker.Web/wwwroot"
+        "cwd": "${workspaceFolder}/src/MyRouteTracker.Frontend"
+      }
+    },
+    {
+      "label": "fe-launch",
+      "command": "pnpm",
+      "type": "shell",
+      "dependsOn": ["pnpm-install"],
+      "args": ["quasar", "dev"],
+      "options": {
+        "cwd": "${workspaceFolder}/src/MyRouteTracker.Frontend"
       }
     },
     {
